force-app/main/default/objects/OrderH__c/OrderH__c.object-meta.xml
<CustomObject>
    <label>OrderH</label>
    <nameField>
        <displayFormat>O-{0000}</displayFormat>
        <label>Order No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OrdersH</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>