force-app/main/default/objects/OrderH__c/fields/LocationH__c.field-meta.xml
<CustomField>
    <fullName>LocationH__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>(Look up to Location)</description>
    <label>LocationH</label>
    <referenceTo>LocationH__c</referenceTo>
    <relationshipLabel>OrdersH</relationshipLabel>
    <relationshipName>OrdersH</relationshipName>
    <type>Lookup</type>
</CustomField>