force-app/main/default/objects/OrderH__c/fields/Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Date__c</fullName>
    <description>The date and time when the order was placed (Data type: Date/Time).</description>
    <label>Order Date</label>
    <type>DateTime</type>
</CustomField>