force-app/main/default/objects/OrderH__c/fields/Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_ID__c</fullName>
    <description>Auto-generated unique identifier for each order (Data type: Auto Number).</description>
    <displayFormat>OID-{0000}</displayFormat>
    <label>Order ID</label>
    <type>AutoNumber</type>
</CustomField>